# UrbanRepML

./: .gitignore  .gitmodules  .mcp.json  AGENTS.md  ANALYSIS_NOTES.md  ARCHITECTURE.md  CLAUDE.md  CONFIG_GUIDE.md  DEVELOPMENT_LOG.md  EARTH_ENGINE_INTEGRATION.md  H3_MIGRATION_REPORT.md  INTEGRATION_STATUS.md  LIBRARY_CHEATSHEET.md  LICENSE  PROJECT_REBUILD_GUIDE.md  README.md  REPO_ANALYSIS_20250829_conv01.md  TODO_FOR_JULES.md  create_base_south_holland.py  create_fsi01_variant.py  create_netherlands_embeddings_simple.py  generate_walk_accessibility.py  probe_log_concat_74d.txt  probe_log_ring_agg_k10.txt  probe_log_unet_2022.txt  pyproject.toml  requirements.txt  run_south_holland_fsi95.bat  setup.py  test_clean_pipeline.py  test_south_holland_fsi99.py  train_netherlands_lattice.py  training_log_1000ep.txt  training_log_unet_1337ep.txt
.claude/: commit_3stage.bat  commit_msg_a.txt  commit_msg_b.txt  do_commits.bat  do_commits.ps1  settings.json  sync_run.py
analysis/: availability_report.json
archive/: INDEX.md
audt/: __init__.py
bridge/: README.md  __init__.py  data_exchange.py  model_integration.py  padic_mdp_scheduler.py  rxinfer_server.py
configs/: netherlands_pipeline.yaml
data/: README.md
docs/: CONFIG_GUIDE.md  DATA_CATALOG.md  DEVELOPMENT_LOG.md  LIBRARY_CHEATSHEET.md  MODALITY_STATUS.md  PROCESSING_LOG.md  github_about.txt
examples/: aerial_imagery_example.py  geoinfer_integration_example.py  renormalizing_unet_example.py  semantic_segmentation_example.py
experiments/: README.md
modalities/: __init__.py  base.py
reports/: 2026-03-08-causal-emergence-phase1.md  2026-03-08-causal-emergence-visualizations.md  2026-03-14-unet-vs-concat-probe-comparison.md  2026-03-21-accessibility-unet-probe-results.md  2026-03-29-ring-agg-plus-unet-probe-comparison.md  2026-04-18-organizational-flywheel-audit.md  2026-04-19-q8-probe-parity.md  2026-04-24-three-embeddings-visual-study.md  2026-05-03-rasterize-voronoi-toolkit.md  probe_alpha_findings.md
scripts/: compare_probes.py  dnn_probe_sweep.py  plot_embeddings.py  plot_linear_probe.py  plot_linear_vs_dnn_comparison.py  plot_targets.py  regenerate_rgb_top3.py  setup_pearl_river_delta.py  show_plots.py
specs/: 3_stage_pipeline_restructure.md  README.md  accessibility_graph_pipeline.md  artifact_provenance.md  between-wave-pause-redesign.md  claude_code_multi_agent_setup.md  coordinator-hello.md  coordinator_to_coordinator.md  dnn_probe.md  experiment_paths.md  h3_index_vs_region_id.md  hex2vec-poi-recovery.md  hooks_architecture.md  poi-pipeline-pyosmium-sedona.md  rasterize_voronoi.md  run_provenance.md  script-hygiene.md  session-identity-architecture.md  skip-connection-fix.md  temporal-supra-profiles.md  valuate_plan_kapstok.md
stage1_modalities/: __init__.py  base.py
stage2_fusion/: __init__.py  concat.py  pipeline.py
stage3_analysis/: __init__.py  analytics.py  classification_probe.py  classification_viz.py  cluster_comparison_plotter.py  cluster_results_writer.py  comparison_plotter.py  dnn_classification_probe.py  dnn_classification_viz.py  dnn_probe.py  dnn_probe_viz.py  hierarchical_cluster_analysis.py  hierarchical_visualization.py  leefbaarometer_target.py  linear_probe.py  linear_probe_viz.py  probe_results_writer.py  save_figure.py  urban_taxonomy_target.py  validation.py
templates/: experiment_config_template.yaml  pipeline_config_template.yaml
tests/: test_classification_probe.py  test_imports.py  test_pipeline.py  test_poi_processor.py  test_rasterize_voronoi.py  test_spatial_db.py  test_urban_taxonomy_target.py
urban_embedding/: README.md  __init__.py  active_inference.py  analytics.py  feature_processing.py  graph_construction.py  hexagonal_graph_constructor.py  hierarchical_cluster_analysis.py  hierarchical_spatial_unet.py  (+11 more)
(+1617 files in other folders)
